--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Co-Operatives</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #121212;
+      color: #fff;
+    }
+    .hero {
+      padding: 100px 0;
+      text-align: center;
+    }
+    .btn-custom {
+      background-color: #ff0000;
+      color: #fff;
+      border: none;
+    }
+    .btn-custom:hover {
+      background-color: #cc0000;
+    }
+    .social-icons a {
+      color: #fff;
+      margin: 0 10px;
+      font-size: 1.5rem;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="container text-center hero">
+    <h1 class="display-4">The Co-Operatives</h1>
+    <p class="lead">Gaming | Fails | Wins | Storytelling</p>
+    <a href="https://youtube.com/@yourchannel" target="_blank" class="btn btn-custom btn-lg">Watch on YouTube</a>
+  </div>
+
+  <div class="container text-center my-5">
+    <h3>Featured Short</h3>
+    <div class="ratio ratio-9x16 my-3">
+      <iframe src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <a href="https://youtube.com/shorts/YOURVIDEO" class="btn btn-outline-light" target="_blank">Watch Full Short</a>
+  </div>
+
+  <div class="container text-center my-5">
+    <h4>Follow Us</h4>
+    <div class="social-icons">
+      <a href="https://youtube.com/@the-cooperatives" target="_blank"><i class="bi bi-youtube"></i></a>
+      <a href="https://tiktok.com/" target="_blank"><i class="bi bi-tiktok"></i></a>
+      <a href="https://instagram.com/" target="_blank"><i class="bi bi-instagram"></i></a>
+    </div>
+  </div>
+
+  <footer class="text-center py-4">
+    <p>&copy; 2025 The Co-Operatives</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.js"></script>
+</body>
+</html>
