--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Co-Operatives</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -31,6 +32,7 @@
     }
   </style>
 </head>
+
 <body>
 
   <div class="container text-center hero">
@@ -44,7 +46,7 @@
     <div class="ratio ratio-9x16 my-3">
       <iframe src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
     </div>
-    <a href="https://youtube.com/shorts/YOURVIDEO" class="btn btn-outline-light" target="_blank">Watch Full Short</a>
+    <a href="https://www.youtube.com/shorts/G14ALoJ0ius" class="btn btn-outline-light" target="_blank">Watch Full Short</a>
   </div>
 
   <div class="container text-center my-5">
