fix: invalid url

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="container text-center hero">
     <h1 class="display-4">The Co-Operatives</h1>
     <p class="lead">Gaming | Fails | Wins | Storytelling</p>
-    <a href="https://youtube.com/@the-cooperatives target="_blank" class="btn btn-custom btn-lg">Watch on YouTube</a>
+    <a href="https://youtube.com/@the-cooperatives" target="_blank" class="btn btn-custom btn-lg">Watch on YouTube</a>
   </div>
 
   <div class="container text-center my-5">
